Bug 356464 - Colorpicker widget picks color on wrong screen with a top-down multi-screen setup.
Summary: Colorpicker widget picks color on wrong screen with a top-down multi-screen s...
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Color Picker (other bugs)
Version First Reported In: 5.5.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Kai Uwe Broulik
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-10 13:07 UTC by Stany MARCEL
Modified: 2015-12-13 16:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stany MARCEL 2015-12-10 13:07:28 UTC
On a setup with two full hd screen, with main screen at 1920x1080+0+1080 and second screen at 1920x1080+0+0.

Colorpicker picks widget always pick colors on top screen, inverting primary screen does not solve the issue.





Reproducible: Always

Steps to Reproduce:
1. Connect two display
2. Configure display to be top down
3. Pick color on bottom display

Actual Results:  
Color picked from top display at same relative offset.

Expected Results:  
Color picket from bottom display.

The two displays are connected on Intel integrated GPU:
Card: Intel Haswell-ULT Integrated Graphics Controller bus-ID: 00:02.0
Display Server: X.Org 1.18.0 driver: intel Resolution: 1920x1080@60.01hz, 1920x1080@60.00hz
GLX Renderer: Mesa DRI Intel Haswell Mobile GLX Version: 3.0 Mesa 11.0.6 Direct Rendering: Yes
Comment 1 Kai Uwe Broulik 2015-12-13 16:23:19 UTC
Git commit 7c714d1756b6760350c2fdc09b661688d7f0473a by Kai Uwe Broulik.
Committed on 13/12/2015 at 16:21.
Pushed by broulik into branch 'Plasma/5.5'.

[Color Picker] Fix grabbing color in multi screen environment

I thought I was smart by looking for the proper screen and then calculating the
mouse offset relative to it and so on when in fact the QPixmap created by
QScreen::grabWindow(0) contains all screens, not just the one I grab from.
This is probably once again X weirdness.
FIXED-IN: 5.5.1

M  +8    -9    applets/colorpicker/plugin/grabwidget.cpp

http://commits.kde.org/kdeplasma-addons/7c714d1756b6760350c2fdc09b661688d7f0473a